<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_image_description">Welcome image</string>
    <string name="game_name">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будутчисла. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="button_ok">Понятно</string>
    <string name="chose_level">Выберите уровень:</string>
    <string name="level_test">Тестовый</string>
    <string name="level_easy">Лёгкий</string>
    <string name="level_normal">Нормальный</string>
    <string name="level_hard">Сложный</string>
    <string name="question_mark">\?</string>
    <string name="counter_right_answers">Количество правильных ответов %s (минимум %s)</string>
    <string name="game_over_description">Game over</string>
    <string name="required_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="percent_right_answers">Процент правильных ответов: %s</string>
    <string name="required_percent_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="your_count">Ваш счёт: %s</string>
    <string name="play_again">Попробовать ещё раз</string>
</resources>