<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.shv.android.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_over_description"
            app:imageResult="@{gameResult.winner}"
            app:layout_constraintBottom_toTopOf="@id/tvRequiredAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_sad" />

        <TextView
            android:id="@+id/tvRequiredAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvYourCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/required_right_answers"/>

        <TextView
            android:id="@+id/tvYourCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:yourCount="@{gameResult.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvRequiredPercentAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequiredAnswers"
            tools:text="@string/your_count"/>

        <TextView
            android:id="@+id/tvRequiredPercentAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:requiredPercentAnswers="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tvPercentRightAnswers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvYourCount"
            tools:text="@string/required_percent_right_answers"/>

        <TextView
            android:id="@+id/tvPercentRightAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:percentRightAnswers="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequiredPercentAnswers"
            tools:text="@string/percent_right_answers"
            />

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>